--- a/JUICE-CDF-HF-SID3-v0.3.0_Mac_2d.ipynb
+++ b/JUICE-CDF-HF-SID3-v0.3.0_Mac_2d.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "bca50671",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "id": "6c181f65",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "id": "05e8da84",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "48d552ee",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
     "# data_name = 'JUICE_L1a_RPWI-HF-SID3_20230523T090033-20230523T091021_V01___RPR1_52000000_2023.143.09.24.44.467.cdf'\n",
     "# data_name = 'JUICE_L1a_RPWI-HF-SID3_20230523T092629-20230523T093617_V01___RPR1_52000000_2023.143.09.50.39.471.cdf'\n",
     "# data_name = 'JUICE_L1a_RPWI-HF-SID3_20230523T095226-20230523T100214_V01___RPR1_52000000_2023.143.10.05.03.469.cdf'\n",
-    "# data_name = 'JUICE_L1a_RPWI-HF-SID3_20230523T102036-20230523T102247_V01___RPR1_52000000_2023.143.10.24.52.503.cdf'\n",
+    "data_name = 'JUICE_L1a_RPWI-HF-SID3_20230523T102036-20230523T102247_V01___RPR1_52000000_2023.143.10.24.52.503.cdf'\n",
     "\n",
     "# *** after X deployment of RWI\n",
     "#  data_name = 'JUICE_L1a_RPWI-HF-SID3_20230523T102431-20230523T102647_V01___RPR1_52000001_2023.143.10.29.16.491.cdf'\n",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "id": "5353f848",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "id": "2ef60e31",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "id": "0c0ac766",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "id": "fd7a2679",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "id": "542c5749",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "id": "f80f7135",
    "metadata": {},
    "outputs": [],
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "id": "7dea4554",
    "metadata": {},
    "outputs": [
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "id": "f1597e8c",
    "metadata": {},
    "outputs": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "id": "858b40e5",
    "metadata": {},
    "outputs": [],
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "id": "a4d4f12c",
    "metadata": {},
    "outputs": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "id": "6963bed7",
    "metadata": {},
    "outputs": [
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "id": "bb5a774e",
    "metadata": {},
    "outputs": [
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "id": "88eeb7be",
    "metadata": {},
    "outputs": [
