UVW: forced correction

--- a/JUICE-CDF-HF-SID21_sample.ipynb
+++ b/JUICE-CDF-HF-SID21_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID21 (PSSR1 rich): L1a QL -- 2023/10/10"
+    "# JUICE RPWI HF SID21 (PSSR1 rich): L1a QL -- 2023/10/14"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "outputs": [],
    "source": [
     "# *** Mode set ***\n",
-    "unit_mode = 1                           # 0: sum    1: /Hz\n",
+    "unit_mode = 0                           # 0: sum    1: /Hz\n",
     "cal_mode = 0                            # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
     "\n",
     "# *** Parameter set ***\n",
@@ -236,6 +236,7 @@
     "    Eu_power2 = Eu_power2 / freq_width1 / 1000\n",
     "    Ev_power2 = Ev_power2 / freq_width1 / 1000\n",
     "    Ew_power2 = Ew_power2 / freq_width1 / 1000\n",
+    "    print(\"frequency width:\", freq_width1[0])\n",
     "\n",
     "f_min = freq_1d[0]\n",
     "f_max = freq_1d[N_frequency-1]\n",
@@ -287,13 +288,11 @@
     "date = date.strftime('%Y/%m/%d')\n",
     "ax4.set_xlabel(date)\n",
     "\n",
-    "#\"\"\"\n",
     "# range: X-axis\n",
     "xlim=[0, N_frequency]\n",
     "ax1.set_xlim(xlim)\n",
     "ax2.set_xlim(xlim)\n",
     "ax3.set_xlim(xlim)\n",
-    "#\"\"\"\n",
     "# range: Y-axis\n",
     "ylim=[10**p_raw_min, 10**p_raw_max]\n",
     "ax1.set_ylim(ylim)\n",
