--- a/JUICE-CDF-HF-SID4_sample.ipynb
+++ b/JUICE-CDF-HF-SID4_sample.ipynb
@@ -292,7 +292,7 @@
     "ax4.set_xlabel(date)\n",
     "\n",
     "# range: X-axis\n",
-    "xlim=[0, N_frequency-1]\n",
+    "xlim=[0, N_frequency*2-1]\n",
     "ax1.set_xlim(xlim)\n",
     "ax2.set_xlim(xlim)\n",
     "ax3.set_xlim(xlim)\n",
