--- a/JUICE-CDF-HF-SID5_sample.ipynb
+++ b/JUICE-CDF-HF-SID5_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2023/10/10"
+    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2023/10/14"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "outputs": [],
    "source": [
     "# *** Mode set ***\n",
-    "unit_mode = 1                           # 0: sum    1: /Hz\n",
+    "unit_mode = 0                           # 0: sum    1: /Hz\n",
     "cal_mode = 0                            # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
     "\n",
     "# *** Parameter set ***\n",
@@ -215,6 +215,7 @@
     "    EE_2d = EE_2d / freq_width_2d / 1000 * data.subdiv_reduction[0]**0.5\n",
     "    EE_power1 = EE_power1 / freq_width1 / 1000 * data.subdiv_reduction[0]**0.5\n",
     "    EE_power2 = EE_power2 / freq_width1 / 1000 * data.subdiv_reduction[0]**0.5\n",
+    "    print(\"frequency width:\", freq_width1[0], data.subdiv_reduction[0])\n",
     "    \n",
     "f_min = freq_1d[0]\n",
     "f_max = freq_1d[N_frequency-1]\n",
