--- a/JUICE-CDF-HF-SID4_sample.ipynb
+++ b/JUICE-CDF-HF-SID4_sample.ipynb
@@ -48,15 +48,14 @@
     "# The latest CDF library https://spdf.gsfc.nasa.gov/pub/software/cdf/dist/latest/\n",
     "from spacepy import pycdf\n",
     "\n",
-    "# os.environ[\"CDF_LIB\"] = \"C:\\\\Program Files\\\\CDF_Distribution\\\\cdf39_0-dist\\\\lib\"\n",
     "import os\n",
     "os.environ[\"CDF_LIB\"] = \"/Applications/cdf/cdf39_0-dist/lib\"\n",
     "\n",
     "# *** Library ***\n",
     "sys.path.append('./lib/')\n",
     "import juice_cdf_lib as juice_cdf\n",
-    "import juice_math_lib as juice_math\n",
-    "import juice_sid4_lib as juice_sid4"
+    "import juice_sid4_lib as juice_sid4\n",
+    "# import juice_math_lib as juice_math"
    ]
   },
   {
@@ -133,7 +132,6 @@
     "data_dir = '/Users/user/0-python/JUICE_data/'        # CDF data folder\n",
     "\n",
     "# *** Ver.2 ***\n",
-    "\n",
     "# 202310 -- SAMPLE\n",
     "data_name = 'test-CCSDS/sample/cdf/SID04_20231007-0135_Cfg07.cdf'\n",
     "# data_name = 'test-CCSDS/sample/cdf/SID04_20231007-0334_Cfg07.cdf'"
