PSSR2 (SID-6 and 22): revised

--- a/JUICE-CDF-HF-SID22_sample.ipynb
+++ b/JUICE-CDF-HF-SID22_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID22 (PSSR2 rich): L1a QL -- 2023/10/13"
+    "# JUICE RPWI HF SID22 (PSSR2 rich): L1a QL -- 2023/10/18"
    ]
   },
   {
@@ -260,23 +260,22 @@
     "ax15 = fig.add_subplot(4, 4, 15)\n",
     "ax16 = fig.add_subplot(4, 4, 16)\n",
     "\n",
-    "\n",
-    "ax1.plot(data.time, data.auto_corr[n_sweep][0][:], linewidth=.5)\n",
-    "ax2.plot(data.time, data.auto_corr[n_sweep][1][:], linewidth=.5)\n",
-    "ax3.plot(data.time, data.auto_corr[n_sweep][2][:], linewidth=.5)\n",
-    "ax4.plot(data.time, data.auto_corr[n_sweep][3][:], linewidth=.5)\n",
-    "ax5.plot(data.time, data.auto_corr[n_sweep][4][:], linewidth=.5)\n",
-    "ax6.plot(data.time, data.auto_corr[n_sweep][5][:], linewidth=.5)\n",
-    "ax7.plot(data.time, data.auto_corr[n_sweep][6][:], linewidth=.5)\n",
-    "ax8.plot(data.time, data.auto_corr[n_sweep][7][:], linewidth=.5)\n",
-    "ax9.plot(data.time, data.auto_corr[n_sweep][8][:], linewidth=.5)\n",
-    "ax10.plot(data.time, data.auto_corr[n_sweep][9][:], linewidth=.5)\n",
-    "ax11.plot(data.time, data.auto_corr[n_sweep][10][:], linewidth=.5)\n",
-    "ax12.plot(data.time, data.auto_corr[n_sweep][11][:], linewidth=.5)\n",
-    "ax13.plot(data.time, data.auto_corr[n_sweep][12][:], linewidth=.5)\n",
-    "ax14.plot(data.time, data.auto_corr[n_sweep][13][:], linewidth=.5)\n",
-    "ax15.plot(data.time, data.auto_corr[n_sweep][14][:], linewidth=.5)\n",
-    "ax16.plot(data.time, data.auto_corr[n_sweep][15][:], linewidth=.5)\n",
+    "ax1.plot(data.time[1:], data.auto_corr[n_sweep][0][1:], linewidth=.5)\n",
+    "ax2.plot(data.time[1:], data.auto_corr[n_sweep][1][1:], linewidth=.5)\n",
+    "ax3.plot(data.time[1:], data.auto_corr[n_sweep][2][1:], linewidth=.5)\n",
+    "ax4.plot(data.time[1:], data.auto_corr[n_sweep][3][1:], linewidth=.5)\n",
+    "ax5.plot(data.time[1:], data.auto_corr[n_sweep][4][1:], linewidth=.5)\n",
+    "ax6.plot(data.time[1:], data.auto_corr[n_sweep][5][1:], linewidth=.5)\n",
+    "ax7.plot(data.time[1:], data.auto_corr[n_sweep][6][1:], linewidth=.5)\n",
+    "ax8.plot(data.time[1:], data.auto_corr[n_sweep][7][1:], linewidth=.5)\n",
+    "ax9.plot(data.time[1:], data.auto_corr[n_sweep][8][1:], linewidth=.5)\n",
+    "ax10.plot(data.time[1:], data.auto_corr[n_sweep][9][1:], linewidth=.5)\n",
+    "ax11.plot(data.time[1:], data.auto_corr[n_sweep][10][1:], linewidth=.5)\n",
+    "ax12.plot(data.time[1:], data.auto_corr[n_sweep][11][1:], linewidth=.5)\n",
+    "ax13.plot(data.time[1:], data.auto_corr[n_sweep][12][1:], linewidth=.5)\n",
+    "ax14.plot(data.time[1:], data.auto_corr[n_sweep][13][1:], linewidth=.5)\n",
+    "ax15.plot(data.time[1:], data.auto_corr[n_sweep][14][1:], linewidth=.5)\n",
+    "ax16.plot(data.time[1:], data.auto_corr[n_sweep][15][1:], linewidth=.5)\n",
     "\n",
     "ax1.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][0]))\n",
     "ax2.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][1]))\n",
@@ -328,23 +327,22 @@
     "ax15 = fig.add_subplot(4, 4, 15)\n",
     "ax16 = fig.add_subplot(4, 4, 16)\n",
     "\n",
-    "\n",
-    "ax1.plot(data.time, data.auto_corr[n_sweep][0][:], linewidth=.5)\n",
-    "ax2.plot(data.time, data.auto_corr[n_sweep][1][:], linewidth=.5)\n",
-    "ax3.plot(data.time, data.auto_corr[n_sweep][2][:], linewidth=.5)\n",
-    "ax4.plot(data.time, data.auto_corr[n_sweep][3][:], linewidth=.5)\n",
-    "ax5.plot(data.time, data.auto_corr[n_sweep][4][:], linewidth=.5)\n",
-    "ax6.plot(data.time, data.auto_corr[n_sweep][5][:], linewidth=.5)\n",
-    "ax7.plot(data.time, data.auto_corr[n_sweep][6][:], linewidth=.5)\n",
-    "ax8.plot(data.time, data.auto_corr[n_sweep][7][:], linewidth=.5)\n",
-    "ax9.plot(data.time, data.auto_corr[n_sweep][8][:], linewidth=.5)\n",
-    "ax10.plot(data.time, data.auto_corr[n_sweep][9][:], linewidth=.5)\n",
-    "ax11.plot(data.time, data.auto_corr[n_sweep][10][:], linewidth=.5)\n",
-    "ax12.plot(data.time, data.auto_corr[n_sweep][11][:], linewidth=.5)\n",
-    "ax13.plot(data.time, data.auto_corr[n_sweep][12][:], linewidth=.5)\n",
-    "ax14.plot(data.time, data.auto_corr[n_sweep][13][:], linewidth=.5)\n",
-    "ax15.plot(data.time, data.auto_corr[n_sweep][14][:], linewidth=.5)\n",
-    "ax16.plot(data.time, data.auto_corr[n_sweep][15][:], linewidth=.5)\n",
+    "ax1.plot(data.time[1:], data.auto_corr[n_sweep][0][1:], linewidth=.5)\n",
+    "ax2.plot(data.time[1:], data.auto_corr[n_sweep][1][1:], linewidth=.5)\n",
+    "ax3.plot(data.time[1:], data.auto_corr[n_sweep][2][1:], linewidth=.5)\n",
+    "ax4.plot(data.time[1:], data.auto_corr[n_sweep][3][1:], linewidth=.5)\n",
+    "ax5.plot(data.time[1:], data.auto_corr[n_sweep][4][1:], linewidth=.5)\n",
+    "ax6.plot(data.time[1:], data.auto_corr[n_sweep][5][1:], linewidth=.5)\n",
+    "ax7.plot(data.time[1:], data.auto_corr[n_sweep][6][1:], linewidth=.5)\n",
+    "ax8.plot(data.time[1:], data.auto_corr[n_sweep][7][1:], linewidth=.5)\n",
+    "ax9.plot(data.time[1:], data.auto_corr[n_sweep][8][1:], linewidth=.5)\n",
+    "ax10.plot(data.time[1:], data.auto_corr[n_sweep][9][1:], linewidth=.5)\n",
+    "ax11.plot(data.time[1:], data.auto_corr[n_sweep][10][1:], linewidth=.5)\n",
+    "ax12.plot(data.time[1:], data.auto_corr[n_sweep][11][1:], linewidth=.5)\n",
+    "ax13.plot(data.time[1:], data.auto_corr[n_sweep][12][1:], linewidth=.5)\n",
+    "ax14.plot(data.time[1:], data.auto_corr[n_sweep][13][1:], linewidth=.5)\n",
+    "ax15.plot(data.time[1:], data.auto_corr[n_sweep][14][1:], linewidth=.5)\n",
+    "ax16.plot(data.time[1:], data.auto_corr[n_sweep][15][1:], linewidth=.5)\n",
     "\n",
     "ax1.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][0]))\n",
     "ax2.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][1]))\n",
