--- a/JUICE-CDF-HF-SID6_sample.ipynb
+++ b/JUICE-CDF-HF-SID6_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2023/10/15"
+    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2023/10/18"
    ]
   },
   {
@@ -306,8 +306,12 @@
     "# ax16.plot(data.time, data.auto_corr[n_sweep][47][:], '-gb', linewidth=.5)\n",
     "auto_corr = data.auto_corr[n_sweep]\n",
     "auto_corr = np.transpose(auto_corr)\n",
-    "auto_corr = auto_corr[0][0:45]\n",
-    "ax16.plot(data.freq, auto_corr, '-b', linewidth=.5)\n",
+    "auto_corr1 = auto_corr[0][0:45]\n",
+    "auto_corr2 = auto_corr[22][0:45]\n",
+    "auto_corr3 = auto_corr[44][0:45]\n",
+    "ax16.plot(data.freq, auto_corr1, '-r', linewidth=.5)\n",
+    "ax16.plot(data.freq, auto_corr2, '-g', linewidth=.5)\n",
+    "ax16.plot(data.freq, auto_corr3, '-b', linewidth=.5)\n",
     "\n",
     "ax1.set_xlabel(\"1 - 3\")\n",
     "ax2.set_xlabel(\"4 - 6\")\n",
@@ -325,7 +329,7 @@
     "ax14.set_xlabel(\"40 - 42\")\n",
     "ax15.set_xlabel(\"43 - 45\")\n",
     "# ax16.set_xlabel(\"46 - 48\")\n",
-    "#ax16.set_xlabel(\"Frequency [kHz]\")\n",
+    "ax16.set_xlabel(\"Frequency [kHz]\")\n",
     "\n",
     "# Plot\n",
     "fig.show\n",
@@ -410,8 +414,12 @@
     "# ax16.plot(data.time, data.auto_corr[n_sweep][47][:], '-gb', linewidth=.5)\n",
     "auto_corr = data.auto_corr[n_sweep]\n",
     "auto_corr = np.transpose(auto_corr)\n",
-    "auto_corr = auto_corr[0][0:45]\n",
-    "ax16.plot(data.freq, auto_corr, '-b', linewidth=.5)\n",
+    "auto_corr1 = auto_corr[0][0:45]\n",
+    "auto_corr2 = auto_corr[22][0:45]\n",
+    "auto_corr3 = auto_corr[44][0:45]\n",
+    "ax16.plot(data.freq, auto_corr1, '-r', linewidth=.5)\n",
+    "ax16.plot(data.freq, auto_corr2, '-g', linewidth=.5)\n",
+    "ax16.plot(data.freq, auto_corr3, '-b', linewidth=.5)\n",
     "\n",
     "ax1.set_xlabel(\"1 - 3\")\n",
     "ax2.set_xlabel(\"4 - 6\")\n",
@@ -429,7 +437,7 @@
     "ax14.set_xlabel(\"40 - 42\")\n",
     "ax15.set_xlabel(\"43 - 45\")\n",
     "# ax16.set_xlabel(\"46 - 48\")\n",
-    "#ax16.set_xlabel(\"Frequency [kHz]\")\n",
+    "ax16.set_xlabel(\"Frequency [kHz]\")\n",
     "\n",
     "# Plot\n",
     "fig.show\n",
