minor update of SID4/5/6/20/21/22

--- a/JUICE-CDF-HF-SID22_sample.ipynb
+++ b/JUICE-CDF-HF-SID22_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID22 (PSSR2 rich): L1a QL -- 2023/10/18"
+    "# JUICE RPWI HF SID22 (PSSR2 rich): L1a QL -- 2023/10/25"
    ]
   },
   {
@@ -131,8 +131,7 @@
     "# *** Ver.2 ***\n",
     "\n",
     "# 202310 -- SAMPLE\n",
-    "data_name = 'test-CCSDS/sample/cdf/SID22_20211214_HF_pssr2.cdf'\n",
-    "# data_name = 'test-TMIDX/202308_EM3/cdf/SID22_Seq06.cdf'"
+    "data_name = 'test-CCSDS/sample/cdf/SID22_20231024-0049.cdf'"
    ]
   },
   {
@@ -156,6 +155,9 @@
     "\n",
     "cdf = pycdf.CDF(cdf_file)\n",
     "data = juice_sid22.juice_getdata_hf_sid22(cdf)\n",
+    "date = data.epoch[0]\n",
+    "month = date.strftime('%Y%m')\n",
+    "print(data.epoch[0], \"-\", data.epoch[-1], \"[\", month, \"]\")\n",
     "\n",
     "n_time = data.auto_corr.shape[0]\n",
     "n_time0 = n_time-1\n",
@@ -198,7 +200,7 @@
     "\n",
     "ax1.plot(np.ravel(data.auto_corr[:][:]), linewidth=.5)\n",
     "ax2.plot(np.ravel(data.freq_auto_corr[:]), linewidth=.5)\n",
-    "ax3.plot(np.ravel(data.epoch[:]))\n",
+    "ax3.plot(np.ravel(data.epoch[:]), '.')\n",
     "ax1.set_ylabel('AutoCorr [RAW @ ADC]')\n",
     "ax2.set_ylabel('Frequency [kHz]')\n",
     "date = data.epoch[0]\n",
@@ -277,22 +279,22 @@
     "ax15.plot(data.time[1:], data.auto_corr[n_sweep][14][1:], linewidth=.5)\n",
     "ax16.plot(data.time[1:], data.auto_corr[n_sweep][15][1:], linewidth=.5)\n",
     "\n",
-    "ax1.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][0]))\n",
-    "ax2.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][1]))\n",
-    "ax3.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][2]))\n",
-    "ax4.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][3]))\n",
-    "ax5.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][4]))\n",
-    "ax6.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][5]))\n",
-    "ax7.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][6]))\n",
-    "ax8.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][7]))\n",
-    "ax9.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][8]))\n",
-    "ax10.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][9]))\n",
-    "ax11.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][10]))\n",
-    "ax12.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][11]))\n",
-    "ax13.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][12]))\n",
-    "ax14.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][13]))\n",
-    "ax15.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][14]))\n",
-    "ax16.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][15]))\n",
+    "ax1.set_xlabel(\"#1: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][0]))\n",
+    "ax2.set_xlabel(\"#2: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][1]))\n",
+    "ax3.set_xlabel(\"#3: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][2]))\n",
+    "ax4.set_xlabel(\"#4: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][3]))\n",
+    "ax5.set_xlabel(\"#5: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][4]))\n",
+    "ax6.set_xlabel(\"#6: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][5]))\n",
+    "ax7.set_xlabel(\"#7: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][6]))\n",
+    "ax8.set_xlabel(\"#8: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][7]))\n",
+    "ax9.set_xlabel(\"#9: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][8]))\n",
+    "ax10.set_xlabel(\"#10: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][9]))\n",
+    "ax11.set_xlabel(\"#11: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][10]))\n",
+    "ax12.set_xlabel(\"#12: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][11]))\n",
+    "ax13.set_xlabel(\"#13: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][12]))\n",
+    "ax14.set_xlabel(\"#14: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][13]))\n",
+    "ax15.set_xlabel(\"#15: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][14]))\n",
+    "ax16.set_xlabel(\"#16v {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][15]))\n",
     "\n",
     "# Plot\n",
     "fig.show\n",
@@ -344,22 +346,22 @@
     "ax15.plot(data.time[1:], data.auto_corr[n_sweep][14][1:], linewidth=.5)\n",
     "ax16.plot(data.time[1:], data.auto_corr[n_sweep][15][1:], linewidth=.5)\n",
     "\n",
-    "ax1.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][0]))\n",
-    "ax2.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][1]))\n",
-    "ax3.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][2]))\n",
-    "ax4.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][3]))\n",
-    "ax5.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][4]))\n",
-    "ax6.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][5]))\n",
-    "ax7.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][6]))\n",
-    "ax8.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][7]))\n",
-    "ax9.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][8]))\n",
-    "ax10.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][9]))\n",
-    "ax11.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][10]))\n",
-    "ax12.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][11]))\n",
-    "ax13.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][12]))\n",
-    "ax14.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][13]))\n",
-    "ax15.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][14]))\n",
-    "ax16.set_xlabel(\"{0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][15]))\n",
+    "ax1.set_xlabel(\"#1: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][0]))\n",
+    "ax2.set_xlabel(\"#2: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][1]))\n",
+    "ax3.set_xlabel(\"#3: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][2]))\n",
+    "ax4.set_xlabel(\"#4: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][3]))\n",
+    "ax5.set_xlabel(\"#5: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][4]))\n",
+    "ax6.set_xlabel(\"#6: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][5]))\n",
+    "ax7.set_xlabel(\"#7: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][6]))\n",
+    "ax8.set_xlabel(\"#8: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][7]))\n",
+    "ax9.set_xlabel(\"#9: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][8]))\n",
+    "ax10.set_xlabel(\"#10: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][9]))\n",
+    "ax11.set_xlabel(\"#11: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][10]))\n",
+    "ax12.set_xlabel(\"#12: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][11]))\n",
+    "ax13.set_xlabel(\"#13: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][12]))\n",
+    "ax14.set_xlabel(\"#14: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][13]))\n",
+    "ax15.set_xlabel(\"#15: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][14]))\n",
+    "ax16.set_xlabel(\"#16: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][15]))\n",
     "\n",
     "# Plot\n",
     "fig.show\n",
