--- a/JUICE-CDF-HF-SID4_sample.ipynb
+++ b/JUICE-CDF-HF-SID4_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID4 (Burst surv): L1a QL -- 2023/10/12"
+    "# JUICE RPWI HF SID4 (Burst surv): L1a QL -- 2023/10/25"
    ]
   },
   {
@@ -133,8 +133,7 @@
     "\n",
     "# *** Ver.2 ***\n",
     "# 202310 -- SAMPLE\n",
-    "data_name = 'test-CCSDS/sample/cdf/SID04_20231007-0135_Cfg07.cdf'\n",
-    "# data_name = 'test-CCSDS/sample/cdf/SID04_20231007-0334_Cfg07.cdf'"
+    "data_name = 'test-CCSDS/sample/cdf/SID04_20231024-0042.cdf'"
    ]
   },
   {
@@ -158,6 +157,9 @@
     "\n",
     "cdf = pycdf.CDF(cdf_file)\n",
     "data = juice_sid4.juice_getdata_hf_sid4(cdf)\n",
+    "date = data.epoch[0]\n",
+    "month = date.strftime('%Y%m')\n",
+    "print(data.epoch[0], \"-\", data.epoch[-1], \"[\", month, \"]\")\n",
     "\n",
     "data.EuEu = data.EuEu * 10**(cf/10)\n",
     "data.EvEv = data.EvEv * 10**(cf/10)\n",
@@ -267,20 +269,20 @@
     "ax4 = fig.add_subplot(4, 1, 4)\n",
     "\n",
     "ax1.plot(np.ravel(data.EuEu), '-r', linewidth=.5)\n",
-    "ax1.plot(np.ravel(data.EvEv), '-b', linewidth=.5)\n",
-    "ax1.plot(np.ravel(data.EwEw), '-g', linewidth=.5)\n",
+    "ax1.plot(np.ravel(data.EvEv), '-g', linewidth=.5)\n",
+    "ax1.plot(np.ravel(data.EwEw), '-b', linewidth=.5)\n",
     "ax1.set_yscale('log')\n",
     "ax2.plot(np.ravel(data.EuEv_re), '-r', linewidth=.5)\n",
-    "ax2.plot(np.ravel(data.EvEw_re), '-b', linewidth=.5)\n",
-    "ax2.plot(np.ravel(data.EwEu_re), '-g', linewidth=.5)\n",
+    "ax2.plot(np.ravel(data.EvEw_re), '-g', linewidth=.5)\n",
+    "ax2.plot(np.ravel(data.EwEu_re), '-b', linewidth=.5)\n",
     "ax2.plot(np.ravel(data.EuEv_im), ':r', linewidth=.5)\n",
-    "ax2.plot(np.ravel(data.EvEw_im), ':b', linewidth=.5)\n",
-    "ax2.plot(np.ravel(data.EwEu_im), ':g', linewidth=.5)\n",
+    "ax2.plot(np.ravel(data.EvEw_im), ':g', linewidth=.5)\n",
+    "ax2.plot(np.ravel(data.EwEu_im), ':b', linewidth=.5)\n",
     "ax2.set_yscale('log')\n",
     "ax3.plot(np.ravel(data.frequency), '-r', linewidth=.5)\n",
-    "ax3.plot(np.ravel(data.freq_step*1000), '-b', linewidth=.5)\n",
-    "ax3.plot(np.ravel(data.freq_width*1000), '-g', linewidth=.5)\n",
-    "ax4.plot(np.ravel(data.epoch))\n",
+    "ax3.plot(np.ravel(data.freq_step*1000), '-g', linewidth=.5)\n",
+    "ax3.plot(np.ravel(data.freq_width*1000), '-b', linewidth=.5)\n",
+    "ax4.plot(np.ravel(data.epoch), '.')\n",
     "ax1.set_ylabel('Power [RAW @ ADC]')\n",
     "ax2.set_ylabel('Real & Img [RAW @ ADC]')\n",
     "ax3.set_ylabel('frequency [kHz]')\n",
@@ -290,10 +292,12 @@
     "ax4.set_xlabel(date)\n",
     "\n",
     "# range: X-axis\n",
+    "\"\"\"\n",
     "xlim=[0, N_frequency*2-1]\n",
     "ax1.set_xlim(xlim)\n",
     "ax2.set_xlim(xlim)\n",
     "ax3.set_xlim(xlim)\n",
+    "\"\"\"\n",
     "# range: Y-axis\n",
     "ylim=[10**p_raw_min, 10**p_raw_max]\n",
     "ax1.set_ylim(ylim)\n",
@@ -329,11 +333,11 @@
     "\n",
     "fig, cal = plt.subplots(figsize=(12, 6))\n",
     "cal.plot(freq1, Eu_power1, ':r', linewidth=.5)\n",
-    "cal.plot(freq1, Ev_power1, ':b', linewidth=.5)\n",
-    "cal.plot(freq1, Ew_power1, ':g', linewidth=.5)\n",
+    "cal.plot(freq1, Ev_power1, ':g', linewidth=.5)\n",
+    "cal.plot(freq1, Ew_power1, ':b', linewidth=.5)\n",
     "cal.plot(freq1, Eu_power2, '-r', linewidth=.5)\n",
-    "cal.plot(freq1, Ev_power2, '-b', linewidth=.5)\n",
-    "cal.plot(freq1, Ew_power2, '-g', linewidth=.5)\n",
+    "cal.plot(freq1, Ev_power2, '-g', linewidth=.5)\n",
+    "cal.plot(freq1, Ew_power2, '-b', linewidth=.5)\n",
     "\n",
     "cal.set_xlabel('Frequency [kHz]')\n",
     "cal.set_xscale('log')\n",
@@ -370,11 +374,11 @@
     "\n",
     "fig, cal = plt.subplots(figsize=(12, 6))\n",
     "cal.plot(freq1, Eu_power1, ':r', linewidth=.5)\n",
-    "cal.plot(freq1, Ev_power1, ':b', linewidth=.5)\n",
-    "cal.plot(freq1, Ew_power1, ':g', linewidth=.5)\n",
+    "cal.plot(freq1, Ev_power1, ':g', linewidth=.5)\n",
+    "cal.plot(freq1, Ew_power1, ':b', linewidth=.5)\n",
     "cal.plot(freq1, Eu_power2, '-r', linewidth=.5)\n",
-    "cal.plot(freq1, Ev_power2, '-b', linewidth=.5)\n",
-    "cal.plot(freq1, Ew_power2, '-g', linewidth=.5)\n",
+    "cal.plot(freq1, Ev_power2, '-g', linewidth=.5)\n",
+    "cal.plot(freq1, Ew_power2, '-b', linewidth=.5)\n",
     "\n",
     "cal.set_xlabel('Frequency [kHz]')\n",
     "cal.set_xlim(f_min, f_max)\n",
