--- a/JUICE-CDF-HF-SID5_sample.ipynb
+++ b/JUICE-CDF-HF-SID5_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2023/10/14"
+    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2023/10/25"
    ]
   },
   {
@@ -135,7 +135,7 @@
     "# *** Ver.2 ***\n",
     "\n",
     "# 202310 -- SAMPLE\n",
-    "data_name = 'test-CCSDS/sample/cdf/SID05_20231007-1905_Cfg08.cdf'"
+    "data_name = 'test-CCSDS/sample/cdf/SID05_20231024-0046.cdf'"
    ]
   },
   {
@@ -159,6 +159,9 @@
     "\n",
     "cdf = pycdf.CDF(cdf_file)\n",
     "data = juice_sid5.juice_getdata_hf_sid5(cdf)\n",
+    "date = data.epoch[0]\n",
+    "month = date.strftime('%Y%m')\n",
+    "print(data.epoch[0], \"-\", data.epoch[-1], \"[\", month, \"]\")\n",
     "\n",
     "data.EE = data.EE * 10**(cf/10)\n",
     "data.EE_dB = 10.0 * np.log10(data.EE)\n",
@@ -246,9 +249,9 @@
     "ax1.plot(np.ravel(data.EE), '-r', linewidth=.5)\n",
     "ax1.set_yscale('log')\n",
     "ax2.plot(np.ravel(data.frequency), '-r', linewidth=.5)\n",
-    "ax2.plot(np.ravel(data.freq_step*100), '-b', linewidth=.5)\n",
-    "ax2.plot(np.ravel(data.freq_width*100), '-g', linewidth=.5)\n",
-    "ax3.plot(np.ravel(data.epoch))\n",
+    "ax2.plot(np.ravel(data.freq_step*100), '-g', linewidth=.5)\n",
+    "ax2.plot(np.ravel(data.freq_width*100), '-b', linewidth=.5)\n",
+    "ax3.plot(np.ravel(data.epoch), '.')\n",
     "\n",
     "ax1.set_ylabel('Power [RAW @ ADC]')\n",
     "ax2.set_ylabel('frequency [kHz]')\n",
@@ -296,8 +299,8 @@
     "p_max0 = p_max\n",
     "\n",
     "fig, cal = plt.subplots(figsize=(12, 6))\n",
-    "cal.plot(freq1, EE_power1, ':r', linewidth=.5)\n",
-    "cal.plot(freq1, EE_power2, '-r', linewidth=.5)\n",
+    "cal.plot(freq1, EE_power1, '-r', linewidth=.5)\n",
+    "cal.plot(freq1, EE_power2, '-b', linewidth=.5)\n",
     "\n",
     "cal.set_xlabel('Frequency [kHz]')\n",
     "cal.set_xscale('log')\n",
@@ -333,8 +336,8 @@
     "p_max0 = p_max\n",
     "\n",
     "fig, cal = plt.subplots(figsize=(12, 6))\n",
-    "cal.plot(freq1, EE_power1, ':r', linewidth=.5)\n",
-    "cal.plot(freq1, EE_power2, '-r', linewidth=.5)\n",
+    "cal.plot(freq1, EE_power1, '-r', linewidth=.5)\n",
+    "cal.plot(freq1, EE_power2, '-b', linewidth=.5)\n",
     "\n",
     "cal.set_xlabel('Frequency [kHz]')\n",
     "cal.set_xlim(f_min, f_max)\n",
