--- a/JUICE-CDF-HF-SID6_sample.ipynb
+++ b/JUICE-CDF-HF-SID6_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2023/10/18"
+    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2023/10/25"
    ]
   },
   {
@@ -130,8 +130,7 @@
     "# *** Ver.2 ***\n",
     "\n",
     "# 202310 -- SAMPLE\n",
-    "data_name = 'test-CCSDS/sample/cdf/SID06_20211214_HF_pssr2.cdf'\n",
-    "# data_name = 'test-TMIDX/202308_EM3/cdf/SID06_Seq06.cdf'"
+    "data_name = 'test-CCSDS/sample/cdf/SID06_20231024-0049.cdf'"
    ]
   },
   {
@@ -155,6 +154,9 @@
     "\n",
     "cdf = pycdf.CDF(cdf_file)\n",
     "data = juice_sid6.juice_getdata_hf_sid6(cdf)\n",
+    "date = data.epoch[0]\n",
+    "month = date.strftime('%Y%m')\n",
+    "print(data.epoch[0], \"-\", data.epoch[-1], \"[\", month, \"]\")\n",
     "\n",
     "n_time = data.auto_corr.shape[0]\n",
     "n_time0 = n_time-1\n",
@@ -195,7 +197,7 @@
     "ax2 = fig.add_subplot(4, 1, 2)\n",
     "\n",
     "ax1.plot(np.ravel(data.auto_corr[:][:]), linewidth=.5)\n",
-    "ax2.plot(np.ravel(data.epoch[:]))\n",
+    "ax2.plot(np.ravel(data.epoch[:]), '.')\n",
     "ax1.set_ylabel('AutoCorr [RAW @ ADC]')\n",
     "date = data.epoch[0]\n",
     "date = date.strftime('%Y/%m/%d')\n",
