--- a/JUICE-CDF-HF-SID4_sample.ipynb
+++ b/JUICE-CDF-HF-SID4_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID4 (Burst surv): L1a QL -- 2023/10/25"
+    "# JUICE RPWI HF SID4 (Burst surv): L1a QL -- 2023/10/29"
    ]
   },
   {
@@ -81,43 +81,10 @@
     "# *** Parameter set ***\n",
     "cal = 0                                 # 0: background     1: CAL\n",
     "p_raw_max = 8.5                         # background: 7.5   CAL: 10\n",
-    "p_raw_min = 1.0                         # background: 2.5   CAL: 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d416ff2b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
+    "\n",
     "# *** Conversion factor: cal_mode ***\n",
-    "cf = 0.0                                # Conversion Factor: RAW\n",
-    "if cal_mode == 1:\n",
-    "    cf = -104.1                         # dBm @ ADC \n",
-    "elif cal_mode == 2:\n",
-    "    cf = -104.1 - 10.00 - 15.0          # V(amplitude) @ HF -- in EM2-1: HF-gain +15dB, ADC: 2Vpp  ==> EM2-3 & later: same [-6dB + 6dB]\n",
-    "elif cal_mode == 3:\n",
-    "    cf = -104.1 - 13.01 - 15.0          # V^2 @ HF (EM2-0 case)\n",
-    "elif cal_mode == 4:\n",
-    "    cf = -104.1 - 13.01 - 15.0 - 5.0    # V^2 @ RWIin -- temporary\n",
-    "\n",
-    "# ******************************************************\n",
-    "# [EM2-0]\n",
-    "# \"1-bit\" = -104.1 dBm = -114.1 dB V  = 1.97E-6 V    ==> \"20-bit\": 2.06 Vpp\n",
-    "# \"HF input\"  +15dB(AMP) -3dB(50-ohm) = \"+12dB\"      ==> \"1-bit\": 5E-7 V,  Full: 0.5 Vpp\n",
-    "# ******************************************************\n",
-    "# [EM2-3]\n",
-    "# \"1-bit\" = -110.1 dBm = -110.1 dB V  = 0.99E-7 V \"  ==> \"20-bit\": 1.03 Vpp\n",
-    "# \"HF input\"  +9dB(AMP)  -3dB(50-ohm受け) = \"+6dB\"    ==> \"1-bit\": 5E-7 V,  Full: 0.5 Vpp\n",
-    "# ******************************************************\n",
-    "\n",
-    "# *** Max / Min in plots ***\n",
-    "p_max = p_raw_max + cf/10\n",
-    "p_min = p_raw_min + cf/10\n",
-    "if unit_mode == 1:\n",
-    "    p_max = p_max - 4.5\n",
-    "    p_min = p_min - 4.5"
+    "cf, p_max, p_min = juice_cdf.cal_factors(unit_mode, cal_mode, cal, p_raw_max, p_raw_min)"
    ]
   },
   {
@@ -526,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
