PSSR3-surv (SID-7)

--- a/JUICE-CDF-HF-SID7_sample.ipynb
+++ b/JUICE-CDF-HF-SID7_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2023/10/29"
+    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2023/10/25"
    ]
   },
   {
@@ -55,7 +55,7 @@
     "sys.path.append('./lib/')\n",
     "import juice_cdf_lib as juice_cdf\n",
     "import juice_math_lib as juice_math\n",
-    "import juice_sid6_lib as juice_sid6"
+    "import juice_sid7_lib as juice_sid7"
    ]
   },
   {
@@ -84,7 +84,7 @@
     "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max, p_min = juice_cdf.cal_factors(unit_mode, cal_mode, cal, p_raw_max, p_raw_min)"
+    "cf, p_max, p_min = juice_cdf.cal_factors(0, cal_mode, cal, p_raw_max, p_raw_min)"
    ]
   },
   {
@@ -101,7 +101,9 @@
     "# *** Ver.2 ***\n",
     "\n",
     "# 202310 -- SAMPLE\n",
-    "data_name = 'test-CCSDS/sample/cdf/SID06_20231024-0049.cdf'"
+    "data_name = 'test-CCSDS/sample/cdf/SID07_20231024-0011.cdf'\n",
+    "# data_name = 'test-CCSDS/sample/cdf/SID07_20231024-0024.cdf'\n",
+    "# data_name = 'test-CCSDS/sample/cdf/SID07_20231024-0034.cdf'"
    ]
   },
   {
@@ -124,16 +126,20 @@
     "%ls $cdf_file\n",
     "\n",
     "cdf = pycdf.CDF(cdf_file)\n",
-    "data = juice_sid6.juice_getdata_hf_sid6(cdf)\n",
+    "data = juice_sid7.juice_getdata_hf_sid7(cdf)\n",
+    "\n",
+    "# epoch\n",
     "date = data.epoch[0]\n",
     "month = date.strftime('%Y%m')\n",
     "print(data.epoch[0], \"-\", data.epoch[-1], \"[\", month, \"]\")\n",
     "\n",
-    "n_time = data.auto_corr.shape[0]\n",
-    "n_time0 = n_time-1\n",
-    "print(\"data size:\", data.auto_corr.shape)  # n_time, 16, data.N_samp_AUX[0]\n",
+    "# data\n",
+    "data.auto_corr = data.auto_corr * 10**(cf/10)\n",
+    "data.time = data.time * 2048    # TMP: \"data.N_samp - 1\"   ???\n",
     "\n",
-    "data.auto_corr = data.auto_corr * 10**(cf/10)"
+    "n_time0 = data.n_time - 1\n",
+    "n_block0 = data.N_block[0]\n",
+    "n_length0 = data.N_samp_AUX[0]"
    ]
   },
   {
@@ -144,7 +150,7 @@
    "outputs": [],
    "source": [
     "# Mode \n",
-    "print(\"==> Ch:\", data.ch_selected[0], \"  Num-sweep:\", n_time, \"   Num-AutoCorr:\", data.N_step_AUX[0], \"   each Length:\", data.N_auto_corr[0] )"
+    "print(\"==> Num-samples:\", data.n_time, \"   Num-Block:\", n_block0, \"   each Length:\", n_length0 )"
    ]
   },
   {
@@ -176,16 +182,11 @@
     "\n",
     "\"\"\"\n",
     "# range: X-axis\n",
-    "xlim=[0, N_frequency-1]\n",
+    "xlim=[n_length0 * 0, n_length0 * 3 - 1]\n",
     "ax1.set_xlim(xlim)\n",
-    "ax2.set_xlim(xlim)\n",
-    "ax3.set_xlim(xlim)\n",
     "# range: Y-axis\n",
-    "ylim=[10**p_raw_min, 10**p_raw_max]\n",
-    "ax1.set_ylim(ylim)\n",
-    "ax2.set_ylim(ylim)\n",
-    "ylim=[f_min, f_max]\n",
-    "ax3.set_ylim(ylim)\n",
+    "# ylim=[10**p_raw_min, 10**p_raw_max]\n",
+    "# ax1.set_ylim(ylim)\n",
     "\"\"\"\n",
     "\n",
     "# Plot\n",
@@ -227,7 +228,6 @@
     "ax13 = fig.add_subplot(4, 4, 13)\n",
     "ax14 = fig.add_subplot(4, 4, 14)\n",
     "ax15 = fig.add_subplot(4, 4, 15)\n",
-    "ax16 = fig.add_subplot(4, 4, 16)\n",
     "\n",
     "ax1.plot(data.time, data.auto_corr[n_sweep][0][:], '-r', linewidth=.5)\n",
     "ax1.plot(data.time, data.auto_corr[n_sweep][1][:], '-g', linewidth=.5)\n",
@@ -274,17 +274,6 @@
     "ax15.plot(data.time, data.auto_corr[n_sweep][42][:], '-r', linewidth=.5)\n",
     "ax15.plot(data.time, data.auto_corr[n_sweep][43][:], '-g', linewidth=.5)\n",
     "ax15.plot(data.time, data.auto_corr[n_sweep][44][:], '-b', linewidth=.5)\n",
-    "# ax16.plot(data.time, data.auto_corr[n_sweep][45][:], '-r', linewidth=.5)\n",
-    "# ax16.plot(data.time, data.auto_corr[n_sweep][46][:], '-g', linewidth=.5)\n",
-    "# ax16.plot(data.time, data.auto_corr[n_sweep][47][:], '-gb', linewidth=.5)\n",
-    "auto_corr = data.auto_corr[n_sweep]\n",
-    "auto_corr = np.transpose(auto_corr)\n",
-    "auto_corr1 = auto_corr[0][0:45]\n",
-    "auto_corr2 = auto_corr[22][0:45]\n",
-    "auto_corr3 = auto_corr[44][0:45]\n",
-    "ax16.plot(data.freq, auto_corr1, '-r', linewidth=.5)\n",
-    "ax16.plot(data.freq, auto_corr2, '-g', linewidth=.5)\n",
-    "ax16.plot(data.freq, auto_corr3, '-b', linewidth=.5)\n",
     "\n",
     "ax1.set_xlabel(\"(1 - 3)  Time [sec]\")\n",
     "ax2.set_xlabel(\"(4 - 6)  Time [sec]\")\n",
@@ -301,8 +290,6 @@
     "ax13.set_xlabel(\"(37 - 39)  Time [sec]\")\n",
     "ax14.set_xlabel(\"(40 - 42)  Time [sec]\")\n",
     "ax15.set_xlabel(\"(43 - 45)  Time [sec]\")\n",
-    "# ax16.set_xlabel(\"(46 - 48)  Time [sec]\")\n",
-    "ax16.set_xlabel(\"Frequency [kHz]\")\n",
     "\n",
     "# Plot\n",
     "fig.show\n",
@@ -312,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe638c90",
+   "id": "9eda0843",
    "metadata": {},
    "source": [
     "# Last data"
@@ -325,7 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep = n_time0\n",
+    "n_sweep = n_time0 - 1\n",
     "\n",
     "fig = plt.figure(figsize=(12, 12))\n",
     "ax1 = fig.add_subplot(4, 4, 1)\n",
@@ -343,7 +330,6 @@
     "ax13 = fig.add_subplot(4, 4, 13)\n",
     "ax14 = fig.add_subplot(4, 4, 14)\n",
     "ax15 = fig.add_subplot(4, 4, 15)\n",
-    "ax16 = fig.add_subplot(4, 4, 16)\n",
     "\n",
     "ax1.plot(data.time, data.auto_corr[n_sweep][0][:], '-r', linewidth=.5)\n",
     "ax1.plot(data.time, data.auto_corr[n_sweep][1][:], '-g', linewidth=.5)\n",
@@ -390,17 +376,6 @@
     "ax15.plot(data.time, data.auto_corr[n_sweep][42][:], '-r', linewidth=.5)\n",
     "ax15.plot(data.time, data.auto_corr[n_sweep][43][:], '-g', linewidth=.5)\n",
     "ax15.plot(data.time, data.auto_corr[n_sweep][44][:], '-b', linewidth=.5)\n",
-    "# ax16.plot(data.time, data.auto_corr[n_sweep][45][:], '-r', linewidth=.5)\n",
-    "# ax16.plot(data.time, data.auto_corr[n_sweep][46][:], '-g', linewidth=.5)\n",
-    "# ax16.plot(data.time, data.auto_corr[n_sweep][47][:], '-gb', linewidth=.5)\n",
-    "auto_corr = data.auto_corr[n_sweep]\n",
-    "auto_corr = np.transpose(auto_corr)\n",
-    "auto_corr1 = auto_corr[0][0:45]\n",
-    "auto_corr2 = auto_corr[22][0:45]\n",
-    "auto_corr3 = auto_corr[44][0:45]\n",
-    "ax16.plot(data.freq, auto_corr1, '-r', linewidth=.5)\n",
-    "ax16.plot(data.freq, auto_corr2, '-g', linewidth=.5)\n",
-    "ax16.plot(data.freq, auto_corr3, '-b', linewidth=.5)\n",
     "\n",
     "ax1.set_xlabel(\"(1 - 3)  Time [sec]\")\n",
     "ax2.set_xlabel(\"(4 - 6)  Time [sec]\")\n",
@@ -417,8 +392,6 @@
     "ax13.set_xlabel(\"(37 - 39)  Time [sec]\")\n",
     "ax14.set_xlabel(\"(40 - 42)  Time [sec]\")\n",
     "ax15.set_xlabel(\"(43 - 45)  Time [sec]\")\n",
-    "# ax16.set_xlabel(\"(46 - 48)  Time [sec]\")\n",
-    "ax16.set_xlabel(\"Frequency [kHz]\")\n",
     "\n",
     "# Plot\n",
     "fig.show\n",
