--- a/JUICE-CDF-HF-SID7_sample.ipynb
+++ b/JUICE-CDF-HF-SID7_sample.ipynb
@@ -135,11 +135,11 @@
     "\n",
     "# data\n",
     "data.auto_corr = data.auto_corr * 10**(cf/10)\n",
-    "data.time = data.time * 2048    # TMP: \"data.N_samp - 1\"   ???\n",
     "\n",
     "n_time0 = data.n_time - 1\n",
     "n_block0 = data.N_block[0]\n",
-    "n_length0 = data.N_samp_AUX[0]"
+    "n_length0 = data.N_samp_AUX[0]\n",
+    "freq_center = data.freq_center[0]"
    ]
   },
   {
@@ -150,7 +150,7 @@
    "outputs": [],
    "source": [
     "# Mode \n",
-    "print(\"==> Num-samples:\", data.n_time, \"   Num-Block:\", n_block0, \"   each Length:\", n_length0 )"
+    "print(\"==> Num-samples:\", data.n_time, \"   Num-Block:\", n_block0, \"   Length:\", n_length0, \"  frequency_center:\", freq_center, \"[kHz]\")"
    ]
   },
   {
